--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li id="close" class="menu-item"><i class="ion-ios-close-empty"></i></li>
         </ul>
     </div>
-    <section class="home img-bg" style="background: url(images/bg/custom/me_hanging.jpg) 0 0; background-size: cover;">
+    <section class="home img-bg" style="background: url(images/bg/custom/me_hanging.jpg) no-repeat center center fixed; min-height: 100%; background-size: cover;">
         <div class="overlay opacity5"></div>
         <div class="container">
             <div class="name-block">
