--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     </div> -->
                     <div class="row text-center">
                         <div class="col-md-12 btn-email">
-                            <a class="btn lowercase">xzheng1995@gmail.com</a>
+                            <a href="mailto:xzheng1995@gmails.com" class="btn lowercase">xzheng1995@gmail.com</a>
                         </div>
                     </div>
                 </section>
@@ -461,7 +461,7 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-md-12 btn-email">
-                            <a class="btn lowercase">xzheng1995@gmail.com</a>
+                            <a href="mailto:xzheng1995@gmails.com" class="btn lowercase">xzheng1995@gmail.com</a>
                         </div>
                     </div>
                 </section>
@@ -623,21 +623,25 @@
                                     </div>
                                 </div> -->
                                 <!-- <div class="col-md-12  offset-md-6"> -->
-                                  <h5>Inspire me, let's be friends.</h5>
-
-                                  <img src="images/favicon.png" alt="Xiaoxi Bitmoji Smile">
-
+                                  <h5>Inspire me, let's grab coffee.</h5>
+                                  <p><a href="mailto:xzheng1995@gmails.com">xzheng1995@gmails.com</a></p>
+                                  <img src="images/me_hike.jpg" alt="Xiaoxi Hiking Picture in Marin Smile">
+                                  <div class="row text-center">
+                                      <div class="col-md-12 btn-email">
+                                          <a href="mailto:xzheng1995@gmails.com" class="btn lowercase">xzheng1995@gmail.com</a>
+                                      </div>
+                                  </div>
                                   <!-- <div class="col-lg-12 col-lg-offset-6 contact-icon"> -->
                                       <!-- <i class="ion-ios-email-outline"></i> -->
                                   <!-- </div> -->
-                                  <p><a href="mailto:xzheng1995@gmails.com">xzheng1995@gmails.com</a></p>
+                                  <!-- <p><a href="mailto:xzheng1995@gmails.com">xzheng1995@gmails.com</a></p> -->
                                 <!-- </div> -->
                             </div>
-                            <div class="col-md-12">
+                            <!-- <div class="col-md-12"> -->
                                 <!--Google Map-->
-                                <div id="map"></div>
+                                <!-- <div id="map"></div> -->
                                 <!--Google Map End-->
-                            </div>
+                            <!-- </div> -->
                         </div>
                     </div>
                 </section>
